<resources>
    <string name="app_name">TrainApp</string>
    <string name="train_app_title">Train App</string>
    <string name="trains">Treinen</string>
    <string name="groups">Ploegen</string>
    <string name="teams">Ploegen</string>
    <string name="train_detail">Component</string>
    <string name="navigation_rail">Navigate between items here</string>
</resources>